refactor: 100명 시도 스크립트 추가, 코드 수정