@@ -13,9 +13,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -30,59 +31,66 @@ public class PerformanceTestDataService {
     private final WaitingListService waitingListService;
     private final JwtRepository jwtRepository;
 
-    private static final String USER_PREFIX = "fixed_perf";
-    private static final String COURSE_TITLE_PREFIX = "성능 테스트 코스";
+    // 삭제 대상 접두사 리스트 (V1, V2 통합)
+    private static final List<String> USER_PREFIXES = Arrays.asList("fixed_perf", "perf_v2", "v2_");
+    private static final List<String> COURSE_TITLE_PREFIXES = Arrays.asList("성능 테스트 코스", "V2 성능 테스트");
 
     /**
      * 성능 테스트 데이터 삭제
-     * Redis 데이터 정리를 먼저 수행하여 DB 트랜잭션 실패와 무관하게 처리되도록 함
+     * 기존 Repository 메서드들을 활용하여 간결하게 구현
      */
     @Transactional
     public void deletePerformanceTestData() {
-        log.info("=== 성능 테스트 데이터 삭제 시작 ===");
+        log.info("=== 성능 테스트 데이터 클린업 시작 ===");
 
-        // 1. 대상 조회
-        List<Member> testMembers = memberRepository.findAllByEmailStartingWith(USER_PREFIX);
-        List<Course> testCourses = courseRepository.findAllByTitleStartingWith(COURSE_TITLE_PREFIX);
+        // 1. 삭제 대상 ID 수집
+        List<UUID> memberIds = new ArrayList<>();
+        for (String prefix : USER_PREFIXES) {
+            memberIds.addAll(memberRepository.findAllByEmailStartingWith(prefix).stream()
+                    .map(Member::getId).toList());
+        }
 
-        List<UUID> memberIds = testMembers.stream().map(Member::getId).collect(Collectors.toList());
-        List<UUID> courseIds = testCourses.stream().map(Course::getId).collect(Collectors.toList());
+        List<UUID> courseIds = new ArrayList<>();
+        for (String prefix : COURSE_TITLE_PREFIXES) {
+            courseIds.addAll(courseRepository.findAllByTitleStartingWith(prefix).stream()
+                    .map(Course::getId).toList());
+        }
 
-        log.info("조회된 테스트 회원: {}명, 테스트 코스: {}개", memberIds.size(), courseIds.size());
+        if (memberIds.isEmpty() && courseIds.isEmpty()) {
+            log.info("정리할 데이터가 없습니다.");
+            return;
+        }
 
-        // 2. Redis 데이터 우선 삭제 (트랜잭션에 덜 민감한 데이터)
-        log.info("[Redis] 리프레시 토큰 삭제 시도 (Prefix: {})", USER_PREFIX);
-        jwtRepository.deleteRefreshTokensByPrefix(USER_PREFIX);
+        // 2. Redis 캐시 및 상태 정리
+        for (String prefix : USER_PREFIXES) {
+            jwtRepository.deleteRefreshTokensByPrefix(prefix);
+        }
+        for (UUID courseId : courseIds) {
+            waitingListService.clearCourseRedisData(courseId);
+        }
+
+        // 3. DB 연관 데이터 삭제 (기존 메서드 활용)
+        log.info("관련 데이터 일괄 삭제 시도 (회원: {}명, 코스: {}개)", memberIds.size(), courseIds.size());
+
+        if (!memberIds.isEmpty()) {
+            attendanceRepository.deleteByMemberIdIn(memberIds);
+            orderRepository.deleteByMemberIdIn(memberIds);
+        }
 
         if (!courseIds.isEmpty()) {
-            log.info("[Redis] 코스 관련 데이터(대기열, 점유정보) 삭제 시도 (코스 수: {})", courseIds.size());
-            for (UUID courseId : courseIds) {
-                waitingListService.clearCourseRedisData(courseId);
-            }
+            attendanceRepository.deleteByCourseIdIn(courseIds);
+            orderRepository.deleteByCourseIdIn(courseIds);
+            courseImageRepository.deleteByCourseIdIn(courseIds);
         }
 
-        // 3. DB 데이터 삭제 (외래 키 관계 고려하여 자식부터 삭제)
-        if (!memberIds.isEmpty() || !courseIds.isEmpty()) {
-            log.info("[DB] 출석 데이터 삭제");
-            if (!memberIds.isEmpty()) attendanceRepository.deleteByMemberIdIn(memberIds);
-            if (!courseIds.isEmpty()) attendanceRepository.deleteByCourseIdIn(courseIds);
-
-            log.info("[DB] 주문 데이터 삭제");
-            if (!memberIds.isEmpty()) orderRepository.deleteByMemberIdIn(memberIds);
-            if (!courseIds.isEmpty()) orderRepository.deleteByCourseIdIn(courseIds);
-
-            log.info("[DB] 코스 이미지 삭제");
-            if (!courseIds.isEmpty()) courseImageRepository.deleteByCourseIdIn(courseIds);
-
-            log.info("[DB] 코스 및 회원 삭제");
-            if (!courseIds.isEmpty()) {
-                courseRepository.deleteByTitleStartingWith(COURSE_TITLE_PREFIX);
-            }
-            if (!memberIds.isEmpty()) {
-                memberRepository.deleteByEmailStartingWith(USER_PREFIX);
-            }
+        // 4. 주 엔티티 최종 삭제
+        for (String titlePrefix : COURSE_TITLE_PREFIXES) {
+            courseRepository.deleteByTitleStartingWith(titlePrefix);
+        }
+        for (String userPrefix : USER_PREFIXES) {
+            memberRepository.deleteByEmailStartingWith(userPrefix);
         }
 
-        log.info("=== 성능 테스트 데이터 삭제 완료 ===");
+        log.info("=== 성능 테스트 데이터 클린업 완료 ===");
     }
 }
